# howcani

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  creds.rs  main.rs  preamble.txt
src/models/: cohere.rs  mod.rs
